--- a/js_a_site.html
+++ b/js_a_site.html
@@ -4,16 +4,20 @@
 <style>
 .rDiv{
   border: 8px outset black;
-  background-color:rgb(155, 127, 198);
+  background-color:rgb(71, 186, 194);
   text-align: center;
 }
 .r1div{
-  border: 8px outset pink;
+  border: 8px outset pink;  
   background-color:rgb(176, 222, 237);
 }
 .r2div{
   border: 8px outset red;
   background-color:azure;
+}
+.r3div{
+  border: 8px outset white;
+  background-color: aliceblue;
 }
 </style>
 <body>
@@ -22,7 +26,6 @@
   <h1>RECIEPE'S FOR MULTIPLE FOOD ITEMS </h1>
   <P style = "font-size:22px">Here you can find the reciepe to your favourite dish.</P>
 </div>
-<br>
 <br>
 <div class  = "r1div">
    <h1>RECIEPE TO COOK MO:MO</h1>
@@ -46,7 +49,6 @@
   </ul>
   <h1 style="color:rgba(47, 52, 55, 0.688)"> Preparing the fillling </h1>
 </div>
-<br>
 <br>
 <div class = "r2div">
   <h1 style = "text-align:center">HOW TO MAKE MOMO ACHAR</h1>
@@ -79,6 +81,38 @@
   <li>Put it in a blender until it gets smooth.</li>
   <li>squeeze a little bit of lemon juice (this also varies according to your taste).</li>
 </ul>
+</div>
+<br>
+<div class="r3div">
+  <h1>HOW TO MAKE NEPALI RICE PUDDING</h1>
+  <p style="font-size:27px">Servings: For four to six people.</p>
+  <br>
+  <p style="font-size:27px">Time: Arount 2 minutes preparation time, Cook time: about 30 minutes. Total time:about 35 minutes.
+  </p>
+  <br>
+  <h1>INGREDIENTS:</h1>
+  <UL style="font-size:27px">
+    <li>Milk (2 liters)</li>
+    <li>Rice (about 3 cup)</li>
+    <li>Coconut (Thinly shredded/sliced)</li>
+    <li>Cashew (2 table spoons, halved)</li>
+    <li>Raisin (2 table spoons)</li>
+    <li>Ghee (1-2 cup)</li>
+    <li>Cardamom (1 and 0.5 table spoon)</li>
+    <li>Sugar (according to your taste)</li>
+    <li>Cloves (5)</li>
+    </UL>
+    <br>
+    <h1> METHOD TO MAKE HTE PUDDING</h1>
+    <UL style="font-size:27px">
+     <li>On a deep cooking utensil, heat ghee and add all of the mentioned dried fruits except cardamom. Fry it until golden brown. Be careful, dried fruits burn really quickly.
+     <li>Add milk after this add sugar and rice. Stir everything and add cardamom.</li>
+     <li>Cook everything on a medium heat and make sure to stir periodically.</li>
+     <li>Throughout the cooking process the quantity of milk reduces and with rice, it becomes thick in texture.</li>
+     <li>Once the rice is cooked and when the mixture becomes gravy like consistency. it is ready to be served.</li>
+     </UL>
+
+
 </div>
 
      
