--- a/js_a_site.html
+++ b/js_a_site.html
@@ -103,7 +103,7 @@
     <li>Cloves (5)</li>
     </UL>
     <br>
-    <h1> METHOD TO MAKE HTE PUDDING</h1>
+    <h1> METHOD TO MAKE THE PUDDING</h1>
     <UL style="font-size:27px">
      <li>On a deep cooking utensil, heat ghee and add all of the mentioned dried fruits except cardamom. Fry it until golden brown. Be careful, dried fruits burn really quickly.
      <li>Add milk after this add sugar and rice. Stir everything and add cardamom.</li>
