--- a/js_a_site.html
+++ b/js_a_site.html
@@ -28,12 +28,12 @@
 </div>
 <br>
 <div class  = "r1div">
-   <h1>RECIEPE TO COOK MO:MO</h1>
+   <h1 style="text-align:center">RECIEPE TO COOK MO:MO</h1>
   <IMG src = "C:\Users\aayus\Downloads\momo.jpeg" height="400" width="600">
     <br><a href="https://nepalrestaurant.co.uk/how-to-make-momos-nepali-way " style="font-size:27px">The link to the source of reciepe.</a>
     <p style = "font-size: 27px">Servings: For one person.</p>
   <P STYLE = "font-size: 27px">Time taken: 20minutes-30minutes. However it might take longer to cook consedering the time taken to assemble the ingrediants.</P>
-  <h1>INGREDIENTS:</h1>
+  <h1 style="text-align:center">INGREDIENTS:</h1>
   <ul style = "font-size:27px">
 <li>500 gm of minced meat</li>
 <li>1 grated onion</li>
@@ -47,14 +47,14 @@
 <li>2 tablespoons of salt</li>
 <li>1 kg of flour</li>
   </ul>
-  <h1 style="color:rgba(47, 52, 55, 0.688)"> Preparing the fillling </h1>
+  <h1 style="color:rgba(47, 52, 55, 0.688)" style="text-align:center"> Preparing the fillling </h1>
 </div>
 <br>
 <div class = "r2div">
-  <h1 style = "text-align:center">HOW TO MAKE MOMO ACHAR</h1>
+  <h1 style="text-align:center">HOW TO MAKE MOMO ACHAR</h1>
   <img src ="C:\Users\aayus\Downloads\momo_achar.jpeg" height="400" width="600" >
   <br><a href="https://nepalrestaurant.co.uk/how-to-make-momos-nepali-way " style="font-size:27px">The link to the source of reciepe.</a>
-<h2>INGREDIENTS:</h2>
+<h2 style="text-align:center">INGREDIENTS:</h2>
 <UL style="font-size:27px">
   <li>10 tomatoes</li>
   <li>3 tablespoons of sesame seeds</li>
@@ -69,7 +69,7 @@
   <li>1 lemon</li>
   <li>700 ml of water</li>
 </UL>
-<h2> STEPS TO MAKE MOMO ACHAR</h2>
+<h2 style="text-align:center"> STEPS TO MAKE MOMO ACHAR</h2>
 <ul style="font-size:27px">
   <li>Roast 3 tablespoons of sesame seeds and 1 tablespoon of cumin seeds in a frying pan till it turns brown.</li>
   <li>Add 2 tablespoons of sunflower oil to the frying pan and heat it.</li>
@@ -84,13 +84,13 @@
 </div>
 <br>
 <div class="r3div">
-  <h1>HOW TO MAKE NEPALI RICE PUDDING</h1>
+  <h1 style="text-align:center">HOW TO MAKE NEPALI RICE PUDDING</h1>
   <p style="font-size:27px">Servings: For four to six people.</p>
   <br>
   <p style="font-size:27px">Time: Arount 2 minutes preparation time, Cook time: about 30 minutes. Total time:about 35 minutes.
   </p>
   <br>
-  <h1>INGREDIENTS:</h1>
+  <h1 style="text-align:center">INGREDIENTS:</h1>
   <UL style="font-size:27px">
     <li>Milk (2 liters)</li>
     <li>Rice (about 3 cup)</li>
@@ -103,7 +103,7 @@
     <li>Cloves (5)</li>
     </UL>
     <br>
-    <h1> METHOD TO MAKE THE PUDDING</h1>
+    <h1 style="text-align:center"> METHOD TO MAKE THE PUDDING</h1>
     <UL style="font-size:27px">
      <li>On a deep cooking utensil, heat ghee and add all of the mentioned dried fruits except cardamom. Fry it until golden brown. Be careful, dried fruits burn really quickly.
      <li>Add milk after this add sugar and rice. Stir everything and add cardamom.</li>
