--- a/js_a_site.html
+++ b/js_a_site.html
@@ -85,6 +85,7 @@
 <br>
 <div class="r3div">
   <h1 style="text-align:center">HOW TO MAKE NEPALI RICE PUDDING</h1>
+  <img src = "https://web.nepalnews.com/storage/story/1024/khir1627624212_12001627628209_1024.jpg" height="400" width="600">
   <p style="font-size:27px">Servings: For four to six people.</p>
   <br>
   <p style="font-size:27px">Time: Arount 2 minutes preparation time, Cook time: about 30 minutes. Total time:about 35 minutes.
